# rustic_opendal

./: Cargo.toml
src/: backend.rs  config.rs  docs.md  lib.rs  tests.rs
